[pom] Remove jdk 17 profile for java.lang as not needed anymore