@@ -226,16 +226,4 @@
     </plugins>
   </build>
 
-  <profiles>
-    <profile>
-      <id>jdk17on</id>
-      <activation>
-        <jdk>[17,)</jdk>
-      </activation>
-      <properties>
-        <argLine>-Djdk.attach.allowAttachSelf --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-      </properties>
-    </profile>
-  </profiles>
-
 </project>
